# meetmaster

./: .env.example  .gitignore  AGENTS.md  DEPLOYMENT_STATUS.md  Dockerfile.miniapp  GITHUB_BACKUP_STATUS_2026-06-02_v2.md  SERVER_TRANSFER_STATUS.md  pyproject.toml  Архитектура_и_технологии_MeetMaster_v1.md  ИНСТРУКЦИЯ_MINI_APP.md  ИНСТРУКЦИЯ_РАЗМЕЩЕНИЕ_БОТА_НА_СЕРВЕРЕ.md  МОИ ССЫЛКИ.md  Проверка_готовности_MeetMaster_v1.md  ТЗ_MeetMaster_v1.md  меню- тестовая.md
6-4 урок создаем бот-календарь/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.miniapp.yml  docker-entrypoint.sh  ИНСТРУКЦИЯ_MINI_APP.md  ИНСТРУКЦИЯ_СОЗДАНИЕ_TELEGRAM_MINI_APP.md  Этапы_разработки_MeetMaster_v1.md
6-7 урок создаем бот календарь мини-приложение для Telegram/: ПЛАН_САМОСТОЯТЕЛЬНОЙ_РАЗРАБОТКИ_MINI_APP.md
app/: main.py
scripts/: run_mini_app_local.ps1
swetlana-workflows это проект из н8н/: 80rfgWosto6W3DE2-_.json  8GOAl797B9opG5Oo-_copy.json  JqJY0PrpcCly60Fj-amoCRM_.json  PYqXV9fyZWisXZXe-AI_Agent_workflow.json  PYz29seiG14Yiv13-_.json  Pc5sOWRAFfP7hwab-My_workflow_2.json  XvLcbrd7wsZDdeta-_.json
tests/: test_email_validator.py  test_repositories.py
var2/: README.md  app.js  index.html  styles.css  анкета для собственника вар2.docx
Бот для телеграмм -АI- шеф повар/: README_запуск_бота_v2.md  diagnose_n8n_ai_chef_bot_2026-05-06.ps1  import_n8n_workflow_2026-05-06.ps1  import_n8n_workflow_2026-05-15_v2.ps1  import_n8n_workflow_v2.ps1  n8n_ai_chef_bot_workflow_2026-05-15_v2.json  n8n_ai_chef_bot_workflow_v2.json  образец .docx  проверка.txt
(+183 files in other folders)
