[project]
name = "meetmaster"
version = "0.1.0"
description = "Telegram bot for meeting requests and Google Calendar approval flow"
requires-python = ">=3.11"
dependencies = [
  "aiogram>=3.4,<4",
  "sqlalchemy>=2.0,<3",
  "asyncpg>=0.29,<1",
  "alembic>=1.13,<2",
  "google-api-python-client>=2.120,<3",
  "google-auth>=2.28,<3",
  "google-auth-oauthlib>=1.2,<2",
]

[project.optional-dependencies]
dev = [
  "aiosqlite>=0.20,<1",
  "pytest>=8.0,<9",
  "ruff>=0.4,<1",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
